--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-uglify": "^0.9.1",
     "grunt-diff-copy": "^0.1.4",
-    "grunt-umd": "^2.3.3",
+    "grunt-webpack": "^1.0.8",
     "load-grunt-config": "^0.16.0",
-    "time-grunt": "^1.1.0"
+    "time-grunt": "^1.1.0",
+    "webpack": "^1.8.2",
+    "webpack-dev-server": "^1.8.0"
   }
 }
